# cynk-console

./: .gitmodules  CMakeLists.txt  README.md  SPEC.md
.github/workflows/: release.yml
certs/: README.md  dev_ca.crt
cmake/: aarch64-linux-gnu.cmake
installer/: cynk-console.nsi
scripts/: demo.sh  install.sh
src/: cli.c  cli.h  compat.h  compat_posix.c  compat_win32.c  cynk_mqtt_pal.h  main.c  mqtt_pal.c  net.c  net.h
